--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Editor
+.*.sw*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -52,3 +55,6 @@ coverage.xml
 # Sphinx documentation
 docs/_build/
 
+# Synology
+pkgscripts
+build_env
