--- a/.gitignore
+++ b/.gitignore
@@ -10,17 +10,17 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-env/
-bin/
-build/
-develop-eggs/
-dist/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
+./env/
+./bin/
+./build/
+./develop-eggs/
+./dist/
+./eggs/
+./lib/
+./lib64/
+./parts/
+./sdist/
+./var/
 *.egg-info/
 .installed.cfg
 *.egg
